[package]
name = "minecraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", default-features = false, features = [
    "bevy_asset","bevy_core_pipeline","bevy_pbr","bevy_render","bevy_winit","ktx2","png","tonemapping_luts","webgl2","x11","zstd","serialize",
    "trace"
]}
bevy_editor_pls = "0.7.0"
bevy_rapier3d = { version = "0.24.0", features = [ "simd-stable", "parallel", "debug-render-3d" ] }
arr_macro = "0.2.1"
serde = "1.0.196"
bincode = "1.3.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.67", features = [ "Window", "Element", "Document", "HtmlElement", "Storage" ] }
gloo = "0.11.0"
web-time = "1.0.0"
base64 = "0.21.7"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[build]
rustflags = ["-C", "target-cpu=native"]